annotate-image/src/Navbar.css
.navbar {
    display: flex;
    align-items: center;
    height: 90px;
    background-color: rgb(37, 37, 37);
    overflow: scroll;
}

.navbar button {
    outline: none;
    border: none;
    margin: 0;
    padding: 0;
    width: auto;
    margin-bottom: 3px;

    width: 80px;
    height: 50px;
    border-radius: 8px;
    background-color: rgb(50, 50, 50);
    cursor: pointer;
}

.navbar label {
    color: white;
    display: flex;
    flex-direction: column;
    text-align: center;
}

.upload-btn {
    background-color: rgb(76, 171, 231) !important;
}

.download-btn {
    background-color: rgb(162, 238, 170) !important;
}

input[type="file"] {
    display: none;
}

.upload-label{
    margin-left:15px;
}

.custom-file-upload {
    outline: none;
    border: none;
    margin: 0;
    padding: 0px;
    margin-bottom: 3px;
    margin-left: 3vw;
    margin-right: 2vw;

    width: 80px;
    height: 50px;
    border-radius: 8px;
    background-color: rgb(76, 171, 231) !important;
    cursor: pointer;
}

#download-btn {
    margin-right: 10vw;
}

#rectangle-btn,
#polygon-btn {
    margin-right: 1vw;
}

#smart-btn {
    margin-right: 8vw;
}

#name-btn {
    margin-right: 8vw;
}

#clear-btn {
    margin-right: 10vw;
}

#tbd-btn {
    margin-right: 1vw;
}

#tbd2-btn {
    margin-right: 1vw;
}

